fix: ul and ol colors for dark mode

--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -215,8 +215,11 @@ div {
   }
 }
 
-p {
+p, ol, ul {
   @include themify($themes) {
     color: themed("textColor");
+    & a {
+      color: themed("hrefColor");
+    }
   }
 }
